Remove some bugs and warnings reported by FindBugs
*Some* of the many, many, many bugs…